--- a/index.html
+++ b/index.html
@@ -15,18 +15,207 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="./styles/login-register-style.css"/>
-    <title>Game Store</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <link rel="stylesheet" href="../../styles/index-styles.css" />
+    <link rel="shortcut icon" href="../../assets/images/icons/game-chief-icon.png" type="image/x-icon">
+    <title>Games Chief</title>
   </head>
   <body>
-    <header>
-  
+		<header>
+      <nav class="navbar navbar-expand-lg navbar-dark py-0">
+        <div class="container-fluid">
+          <div class="d-flex border-end py-3">
+            <img src="../../assets/images/icons/game-chief-logo.svg" alt="" width="45" height="" class="d-inline-block align-text-top">
+            <a class="navbar-brand fs-3 pe-2" href="/index.html">Games Chief</a>
+          </div>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse ps-2" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-3 me-auto mb-2 mb-lg-0">
+              <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Inicio</a></li>
+              <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
+              <li class="nav-item"><a class="nav-link" href="#">Nosotros</a></li>
+            </ul>
+            <ul class="navbar-nav mb-2 mb-lg-0">
+              <li class="nav-item"><a class="nav-link" href="#">Ingresar</a></li>
+              <li class="nav-item"><a class="nav-link text-success" href="#">Admin</a></li>
+              <li class="nav-item"><a class="nav-link text-danger" href="#">Salir</a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     </header>
-    <main>
-      <!-- AQUI VA EL CONTENIDO DE TU PAGINA -->
+    <main class="mb-4">
+      <div class="hero-container container-fluid px-0">
+        <div class="col-md-12 card border-0">
+          <img src="./assets/images/games-store-main/cover.jpg" alt="" class="card-img">
+          <div class="container-fluid card-img-overlay caption-back row gx-0">
+            <div class="col-6 ps-5 d-flex flex-column justify-content-end">
+              <h2 class="display-4">Half Life: Alyx</h2>
+              <p class="badge bg-danger fs-5 col-3">Disparos</p>
+              <p class="lead my-3">Half-Life: Alyx es el regreso de Valve a la serie Half-Life. Es la historia de una lucha imposible contra una despiadada raza alienígena conocida como el Combine, ambientada entre los acontecimientos de Half-Life y Half-Life 2.
+              Ambientado entre los acontecimientos de Half-Life y Half-Life 2, Alyx Vance y su padre Eli montan una resistencia temprana a la brutal ocupación de la Tierra por parte de los Combine.
+            </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="games-container container my-4 p-4">
+        <h2 class="mb-4">Nuestro catalogo:</h2>
+        <div class="row d-flex justify-content-around pb-4">
+          <div class="col-3 card game-card px-0">
+            <img src="/assets/images/games-store-main/game-1-shooter.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <div class="d-flex justify-content-between">
+                <h5 class="card-title">Modern Warfare</h5>
+                <p class="badge bg-danger">Shooter</p>
+              </div>
+              <p class="card-text">Sumergete en una narrativa increíblemente cruda, descarnada y provocativa que aporta una intensidad sin igual y arroja luz sobre la naturaleza cambiante de la guerra moderna.</p>
+              <a href="#" class="btn btn-success">Ver mas</a>
+            </div>
+          </div>
+          <div class="col-3 card game-card px-0">
+            <img src="/assets/images/games-store-main/game-2-shooter.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <div class="d-flex justify-content-between">
+                <h5 class="card-title">Half Life</h5>
+                <p class="badge bg-danger">Shooter</p>
+              </div>
+              <p class="card-text">El Dr Gordon Freeman no habla ni una sola palabra, pero tiene un infierno de historia para contarte, una historia revolucionaria que puede no ser todo lo que parece, contada no a través de las escenas, sino del entorno visual.</p>
+              <a href="#" class="btn btn-success">Ver mas</a>
+            </div>
+          </div>
+          <div class="col-3 card game-card px-0">
+            <img src="/assets/images/games-store-main/game-3-shooter.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <div class="d-flex justify-content-between">
+                <h5 class="card-title">Rainbow Six Siege</h5>
+                <p class="badge bg-danger">Shooter</p>
+              </div>
+              <p class="card-text">Inspirado en la realidad de los operativos antiterroristas, te invita a dominar el arte de la destrucción. Los intensos enfrentamientos, las tácticas en equipo, y la acción explosiva son el centro de la experiencia. </p>
+              <a href="#" class="btn btn-success">Ver mas</a>
+            </div>
+          </div>
+        </div>
+        <div class="row d-flex justify-content-around pb-4">
+          <div class="col-3 card game-card px-0">
+            <img src="/assets/images/games-store-main/game-1-puzzle.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <div class="d-flex justify-content-between">
+                <h3 class="card-title">Portal 2</h3>
+                <p class="badge bg-warning">Puzzle</p>
+              </div>
+              <p class="card-text">Chell, y su nuevo amigo robot, Wheatley, se enfrentan a más puzzles concebidos por GLaDOS, una I.A. con el único propósito de probar la Pistola de Portales y vengarse de Chell por los sucesos de Portal.</p>
+              <a href="#" class="btn btn-success">Ver mas</a>
+            </div>
+          </div>
+          <div class="col-3 card game-card px-0">
+            <img src="/assets/images/games-store-main/game-2-puzzle.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <div class="d-flex justify-content-between">
+                <h5 class="card-title">The Turing Test</h5>
+                <p class="badge bg-warning">Puzzle</p>
+              </div>
+              <p class="card-text">Explora los fenómenos de la conciencia y desafía el significado de la intuición humana. Toma el control de Ava Turing, una ingeniera de la ISA, y avanza a través de una historiade introspección y moralidad.</p>
+              <a href="#" class="btn btn-success">Ver mas</a>
+            </div>
+          </div>
+          <div class="col-3 card game-card px-0">
+            <img src="/assets/images/games-store-main/game-3-puzzle.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <div class="d-flex justify-content-between">
+                <h5 class="card-title">Q.U.B.E. 2</h5>
+                <p class="badge bg-warning">Puzzle</p>
+              </div>
+              <p class="card-text">Una arqueóloga varada ha despertado entre las ruinas de un antiguo paisaje alienígena. Con la lejana ayuda de otro superviviente, debes manipular la estructura de este misterioso mundo y encontrar el camino de vuelta a casa.</p>
+              <a href="#" class="btn btn-success">Ver mas</a>
+            </div>
+          </div>
+        </div>
+        <div class="row d-flex justify-content-around pb-4">
+          <div class="col-3 card game-card px-0">
+            <img src="/assets/images/games-store-main/game-1-strategy.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <div class="d-flex justify-content-between">
+                <h5 class="card-title">Age Of Empires IV</h5>
+                <p class="badge bg-info">Strategy</p>
+              </div>
+              <p class="card-text">Age of Empires IV te ofrece una experiencia de estrategia en tiempo real evolucionado a una nueva generación. Poniéndote en el centro de épicas batallas históricas que dieron forma al mundo.</p>
+              <a href="#" class="btn btn-success">Ver mas</a>
+            </div>
+          </div>
+          <div class="col-3 card game-card px-0">
+            <img src="/assets/images/games-store-main/game-2-strategy.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <div class="d-flex justify-content-between">
+                <h5 class="card-title">Warhammer</h5>
+                <p class="badge bg-info">Strategy</p>
+              </div>
+              <p class="card-text">Se acerca un cataclismo. Reúne tus fuerzas y entra en el Reino del Caos, una dimensión de horror alucinante donde se decidirá el destino del mundo. ¿Conquistarás a tus Daemons o los comandarás?</p>
+              <a href="#" class="btn btn-success">Ver mas</a>
+            </div>
+          </div>
+          <div class="col-3 card game-card px-0">
+            <img src="/assets/images/games-store-main/game-3-strategy.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <div class="d-flex justify-content-between">
+                <h5 class="card-title">Frozenheim</h5>
+                <p class="badge bg-info">Strategy</p>
+              </div>
+              <p class="card-text">Dirige a tu clan vikingo a través de las dificultades del norte helado, estación tras estación, año tras año. Construye y sobrevive. Zarpa, explora y conquista. Gana el favor de Odín y asegura tu lugar en el Valhalla.</p>
+              <a href="#" class="btn btn-success">Ver mas</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="services-container container my-4 p-4">
+        <div class="row">
+          <h2>Prestigio digno de un <span class="fw-bold">jefe</span>.</h2>
+          <p class="fs-5">En <span class="text-success fw-bold">Game Chiefs</span> somos conscientes de lo que busca todo fanatico de los videojuegos, por eso trabajamos constantemente en poder ofrecerte lo mejor.</p>
+        </div>
+        <div class="row d-flex justify-content-around pb-4 pt-5">
+          <div class="service-card col col-3 d-flex flex-column align-items-center">
+            <img src="/assets/images/games-store-main/service-platform.png" alt="" class="img-fluid w-25 mb-3">
+            <h3 class="text-center mb-3">Soporte</h3>
+            <p>Apostamos por juegos en la mayoria de las plataformas, para que sin importar desde donde juegues, siempre puedas divertirte.</p>
+          </div>
+          <div class="service-card  col col-3 d-flex flex-column align-items-center">
+            <img src="/assets/images/games-store-main/service-genre.png" alt="" class="img-fluid w-25 mb-3">
+            <h3 class="text-center mb-3">Variedad</h3>
+            <p>Nuestro versatil catalogo tiene para ofrecerte todo tipo de juegos, esta garantizado que encontraras el ideal para ti.</p>
+          </div>
+          <div class="service-card col col-3 d-flex flex-column align-items-center">
+            <img src="/assets/images/games-store-main/service-buy.png" alt="" class="img-fluid w-25 mb-3">
+            <h3 class="justy mb-3">Calidad</h3>
+            <p>Elige un juego que te guste y compralo, asi de sencillo. Del resto siempre nos encargamos nosotros.</p>
+          </div>
+        </div>
+      </div>
     </main>
-    <footer>
-      <!-- AQUI VA EL FOOTER -->
+    <footer class="container-fluid d-flex flex-wrap justify-content-between align-items-center py-3">
+      <div class="col-md-3 ms-3 d-flex align-items-center">
+        <p class="mb-0 fs-5 text-white">© 2022 Games Chief</p>
+      </div>
+      <div class="col-md-3 d-flex align-items-center justify-content-center mb-md-0 ">
+        <a href="" class="link-dark text-decoration-none"><img src="../../assets/images/icons/game-chief-logo.svg" alt="" width="100"></a>
+      </div>
+      <div class="nav col-md-3 me-3 justify-content-end">
+        <ul class="d-flex flex-row mb-0 list-unstyled">
+          <li class="ms-3"><i class="bi bi-github text-white fs-3"></i></li>
+          <li class="ms-3"><i class="bi bi-instagram text-white fs-3"></i></li>
+          <li class="ms-3"><i class="bi bi-facebook text-white fs-3"></i></li>
+        </ul>
+      </div>
     </footer>
   </body>
 </html>
